# td_jepa_public

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  train.py
entry_points/: train_offline.py
metamotivo/: __init__.py  base.py  base_model.py  nn_filters.py  nn_models.py  normalizers.py  pixel_models.py  pytree_utils.py  utils.py
metamotivo/agents/: __init__.py
metamotivo/agents/byol/: agent.py  model.py
metamotivo/agents/byol_flowbc/: agent.py  model.py
metamotivo/agents/fb/: agent.py  model.py
metamotivo/agents/fb_flowbc/: agent.py  model.py  nn_models.py
metamotivo/agents/hilp/: agent.py  model.py
metamotivo/agents/hilp_flowbc/: agent.py  model.py
metamotivo/agents/icvf/: agent.py  model.py  nn_models.py
metamotivo/agents/icvf_flowbc/: agent.py  model.py
metamotivo/agents/laplacian/: agent.py
metamotivo/agents/laplacian_flowbc/: agent.py
metamotivo/agents/rldp/: agent.py  model.py
metamotivo/agents/rldp_flowbc/: agent.py  model.py
metamotivo/agents/sf/: agent.py  model.py
metamotivo/agents/sf_flowbc/: agent.py  model.py
metamotivo/agents/spr/: agent.py  model.py
metamotivo/agents/spr_flowbc/: agent.py  model.py
metamotivo/agents/td3/: agent.py  model.py  nn_models.py
metamotivo/agents/td3_flowbc/: agent.py  model.py  nn_models.py
metamotivo/agents/td_jepa/: agent.py  model.py
metamotivo/agents/td_jepa_flowbc/: agent.py  model.py
metamotivo/buffers/: parallel.py  transition.py
metamotivo/data_loading/: base.py  dmc.py  ogbench.py
metamotivo/envs/: dmc.py  ogbench.py
metamotivo/envs/dmc_tasks/: __init__.py  cheetah.py  dmc.py  dmc2gym.py  humanoid.py  pointmass.py  quadruped.py  rewards.py  walker.py
metamotivo/envs/utils/: gym_spaces.py  rollout.py  wrappers.py
metamotivo/evaluations/: base.py  dmc.py  ogbench.py
metamotivo/misc/: launcher_utils.py  loggers.py
scripts/baselines/pixel/: launch_fb_dmc.py  launch_fb_ogbench.py  launch_rldp_dmc.py  launch_rldp_ogbench.py  launch_sf_dmc.py  launch_sf_ogbench.py  launch_sptd_dmc.py  launch_sptd_ogbench.py  launch_sptdff_dmc.py  launch_sptdff_ogbench.py  launch_td3_dmc.py  launch_td3_ogbench.py
scripts/baselines/replearn/: launch_fb_dmc.py  (+11 more)
(+48 files in other folders)
